svg/ changed to SVG/

--- a/stas-test/assets/scss/_navigation.scss
+++ b/stas-test/assets/scss/_navigation.scss
@@ -82,15 +82,15 @@
     {   
         @include icon-box-settings;
         // We can't change color of icon when we adding it this way. So just leave this for older browsers
-        background-image: url('../img/svg/compass2.svg');
+        background-image: url('../img/SVG/compass2.svg');
         opacity: 50%;
 
         // for newer browsers 
         @supports(-webkit-mask-image: url()) or (mask-image: url())
         {
             background-color: $color-menu-links; 
-            -webkit-mask-image: url('../img/svg/compass2.svg'); 
-            mask-image: url('../img/svg/compass2.svg'); // after 3 years mask-image, without prefix, still does not work in chrome
+            -webkit-mask-image: url('../img/SVG/compass2.svg'); 
+            mask-image: url('../img/SVG/compass2.svg'); // after 3 years mask-image, without prefix, still does not work in chrome
             @include support-settings;
         }
     }    
@@ -99,15 +99,15 @@
     {   
         @include icon-box-settings;
         // We can't change color of icon when we adding it this way. So just leave this for older browsers
-        background-image: url('../img/svg/image.svg');
+        background-image: url('../img/SVG/image.svg');
         opacity: 50%;
 
         // for newer browsers 
         @supports(-webkit-mask-image: url()) or (mask-image: url())
         {
             background-color: $color-menu-links; 
-            -webkit-mask-image: url('../img/svg/image.svg'); 
-            mask-image: url('../img/svg/image.svg'); // after 3 years mask-image, without prefix, still does not work in chrome
+            -webkit-mask-image: url('../img/SVG/image.svg'); 
+            mask-image: url('../img/SVG/image.svg'); // after 3 years mask-image, without prefix, still does not work in chrome
             @include support-settings;
         }
     }     
@@ -116,15 +116,15 @@
     {   
         @include icon-box-settings;
         // We can't change color of icon when we adding it this way. So just leave this for older browsers
-        background-image: url('../img/svg/envelop.svg');
+        background-image: url('../img/SVG/envelop.svg');
         opacity: 50%;
 
         // for newer browsers 
         @supports(-webkit-mask-image: url()) or (mask-image: url())
         {
             background-color: $color-menu-links;  
-            -webkit-mask-image: url('../img/svg/envelop.svg'); 
-            mask-image: url('../img/svg/envelop.svg'); // after 3 years mask-image, without prefix, still does not work in chrome
+            -webkit-mask-image: url('../img/SVG/envelop.svg'); 
+            mask-image: url('../img/SVG/envelop.svg'); // after 3 years mask-image, without prefix, still does not work in chrome
             @include support-settings;
         }
     } 
