--- a/stas-test/assets/scss/_base.scss
+++ b/stas-test/assets/scss/_base.scss
@@ -56,7 +56,7 @@ html {
 
 ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
     color: $color-grey-dark-1;
-    opacity: .5; /* Firefox */
+    opacity: 0.5; /* Firefox */
 }
   
 :-ms-input-placeholder { /* Internet Explorer 10-11 */
