--- a/stas-test/assets/scss/_navigation.scss
+++ b/stas-test/assets/scss/_navigation.scss
@@ -170,7 +170,7 @@
         text-align: center;
         padding: 11px;
         display: block;
-        transition: all .2s;
+        //transition: all .2s;
         opacity: 0.5;
     }
 
