--- a/stas-test/assets/scss/_navigation.scss
+++ b/stas-test/assets/scss/_navigation.scss
@@ -171,7 +171,7 @@
         padding: 11px;
         display: block;
         //transition: all .2s;
-        opacity: 0.5;
+        //opacity: 0.5;
     }
 
     @mixin common-link-settings-1 {
