css changes applying test

--- a/stas-test/assets/scss/_buttons.scss
+++ b/stas-test/assets/scss/_buttons.scss
@@ -8,7 +8,7 @@
     text-transform: uppercase;
     padding: 1.2rem 2.5rem;
     cursor: pointer;
-    transition: all .2s;
+    //transition: all .2s;
     align-self: flex-start;
     font-weight: bold;
     //filter: brightness(80%);
