--- a/stas-test/assets/scss/_navigation.scss
+++ b/stas-test/assets/scss/_navigation.scss
@@ -170,8 +170,8 @@
         text-align: center;
         padding: 11px;
         display: block;
-        //transition: all .2s;
-        //opacity: 0.5;
+        transition: all .2s;
+        opacity: 0.5;
     }
 
     @mixin common-link-settings-1 {
