--- a/stas-test/assets/scss/_base.scss
+++ b/stas-test/assets/scss/_base.scss
@@ -1,74 +1,71 @@
-
 html {
-    box-sizing: border-box;
-    font-size: 62.5%; // 10px
-    font-weight: 300;
-    font-family: $font-display;
-    word-spacing: 1px;
-    -ms-text-size-adjust: 100%;
-    -webkit-text-size-adjust: 100%;
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-font-smoothing: antialiased;
-    box-sizing: border-box;
-    //background-color: $color-secondary;
+  -moz-osx-font-smoothing: grayscale;
+  -ms-text-size-adjust: 100%;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-size-adjust: 100%;
+  box-sizing: border-box;
+  box-sizing: border-box;
+  font-family: $font-display;
+  font-size: 62.5%; // 10px
+  font-weight: 300;
+  word-spacing: 1px;
 }
 
-*, 
+*,
 *::before,
 *::after {
-    margin: 0;
-    padding: 0;
-    box-sizing: inherit;
+  box-sizing: inherit;
+  margin: 0;
+  padding: 0;
 }
 
 .container {
-    margin: 0 auto;
-    min-height: 100vh;
-    max-width: 182rem;
-
-    display: flex;
-    flex-direction: column;
-    //border: 1px solid black;
-    background-color: $color-secondary;
+  background-color: $color-secondary;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  max-width: 182rem;
+  min-height: 100vh;
 }
 
 .container-world-news-page {
-    margin: 0 auto;
-    min-height: 100vh;
-    max-width: 182rem;
-
-    display: flex;
-    flex-direction: column;
-    background-color: $color-secondary;
+  background-color: $color-secondary;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  max-width: 182rem;
+  min-height: 100vh;
 }
 
 .container-world-news-page-top {
-    @media only screen and (min-width: $bp-tablet) {
-        padding: 0 8rem 3rem 8rem;
-    }  
-    display: flex;
-    flex-direction: column;
+  @media only screen and (min-width: $bp-tablet) {
+    padding: 0 8rem 3rem 8rem;
+  }
+  display: flex;
+  flex-direction: column;
 }
 
 .container-world-news-page-bottom {
-    
 }
 
-::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-    color: $color-grey-dark-1;
-    opacity: 0.5; /* Firefox */
+::placeholder {
+  /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: $color-grey-dark-1;
+  opacity: 0.5; /* Firefox */
 }
-  
-:-ms-input-placeholder { /* Internet Explorer 10-11 */
-    color: $color-grey-dark-1;
+
+:-ms-input-placeholder {
+  /* Internet Explorer 10-11 */
+  color: $color-grey-dark-1;
 }
-  
-::-ms-input-placeholder { /* Microsoft Edge */
-    color: $color-grey-dark-1;
+
+::-ms-input-placeholder {
+  /* Microsoft Edge */
+  color: $color-grey-dark-1;
 }
 
 .input:focus {
-    outline: none !important;
-    border: 1px solid red !important;
-    box-shadow: 0 0 10px red !important;
+  border: 1px solid red !important;
+  box-shadow: 0 0 10px red !important;
+  outline: none !important;
 }
