--- a/stas-test/assets/scss/_email-box.scss
+++ b/stas-test/assets/scss/_email-box.scss
@@ -1,55 +1,52 @@
 @mixin icon-box-settings {
-    height: 1.6rem;
-    width: 1.3rem;
-    background-size: cover;
-  }
-  
-  @mixin support-settings {
-    -webkit-mask-size: cover;
-    mask-size: cover; // mask allow us to see background. (throught specified shape (mask-image))
-    background-image: none;
-  }
-  
-  .user-email-box {
-  
-    &__text-box {
-      display: flex;
-    }
-  
-    &__text {
-      color: $color-grey-dark-1;
-      margin-top: 1rem;
-      font-size: 1.1rem;
-    }
-  
-    &__icon-box {
-      margin-top: .8rem;
-      margin-left: -2.5rem;;
-      @include icon-box-settings;
-      // We can't change color of icon when we adding it this way. So just leave this for older browsers
-      background-image: url("../img/location-arrow.svg");
-  
-      // for newer browsers
-      @supports (-webkit-mask-image: url()) or (mask-image: url()) {
-        background-color: $color-white;
-        -webkit-mask-image: url("../img/location-arrow.svg");
-        mask-image: url("../img/location-arrow.svg"); // after 3 years mask-image, without prefix, still does not work in chrome
-        @include support-settings;
-      }
-    }
-  }
-  
-  .email-field {
-    padding: 1rem;
-    border-radius: $border-radius;
-    border: 1px solid $color-grey-dark-1;
-    background-color: $color-grey-dark-2;
-    color: $color-grey-dark-1;
-    width: 26rem;
-    width: 100%;
-    max-width: 45rem;
+  background-size: cover;
+  height: 1.6rem;
+  width: 1.3rem;
+}
 
-    @media only screen and (min-width: $bp-desktop) {
-      width: 26rem;
+@mixin support-settings {
+  -webkit-mask-size: cover;
+  background-image: none;
+  mask-size: cover; // mask allow us to see background. (throught specified shape (mask-image))
+}
+
+.user-email-box {
+  &__text-box {
+    display: flex;
+  }
+
+  &__text {
+    color: $color-grey-dark-1;
+    font-size: 1.1rem;
+    margin-top: 1rem;
+  }
+
+  &__icon-box {
+    @include icon-box-settings;
+    // We can't change color of icon when we adding it this way. So just leave this for older browsers
+    background-image: url("../img/svg/location-arrow.svg");
+    margin: 0.8rem 0 0 -2.5rem;
+
+    // for newer browsers
+    @supports (-webkit-mask-image: url()) or (mask-image: url()) {
+      -webkit-mask-image: url("../img/svg/location-arrow.svg");
+      @include support-settings;
+      background-color: $color-white;
+      mask-image: url("../img/svg/location-arrow.svg"); // after 3 years mask-image, without prefix, still does not work in chrome
     }
   }
+}
+
+.email-field {
+  background-color: $color-grey-dark-2;
+  border-radius: $border-radius;
+  border: 1px solid $color-grey-dark-1;
+  color: $color-grey-dark-1;
+  max-width: 45rem;
+  padding: 1rem;
+  width: 100%;
+
+  @media only screen and (min-width: $bp-desktop) {
+    width: 26rem;
+  }
+}
