--- a/stas-test/assets/scss/main.scss
+++ b/stas-test/assets/scss/main.scss
@@ -1,6 +1,6 @@
 @import "base";
 @import "buttons";
-@import "components";
+@import "components.scss";
 @import "email-box";
 @import "footer";
 @import "header";
