chevron new path

--- a/stas-test/assets/scss/_components.scss
+++ b/stas-test/assets/scss/_components.scss
@@ -776,14 +776,14 @@ h2 {
     z-index: 10;
 
     &--down {
-      background-image: url("../img/svg/chevron-thin-down.svg");
+      background-image: url("~assets/img/svg/chevron-thin-down.svg");
 
       @supports (-webkit-mask-image: url()) or (mask-image: url()) {
-        -webkit-mask-image: url("../img/svg/chevron-thin-down.svg");
+        -webkit-mask-image: url("~assets/img/svg/chevron-thin-down.svg");
         -webkit-mask-size: cover;
         background-color: $color-grey-dark-2;
         background-image: none;
-        mask-image: url("../img/svg/chevron-thin-down.svg");
+        mask-image: url("~assets/img/svg/chevron-thin-down.svg");
         mask-size: cover;
       }
     }
