--- a/stas-test/assets/scss/_navigation.scss
+++ b/stas-test/assets/scss/_navigation.scss
@@ -64,14 +64,14 @@
   &__home {
     @include icon-box-settings;
     // We can't change color of icon when we adding it this way. So just leave this for older browsers
-    background-image: url("~assets/img/svg/home.svg");
+    background-image: url("~assets/img/SVG/home.svg");
 
     // for newer browsers
     @supports (-webkit-mask-image: url()) or (mask-image: url()) {
-      -webkit-mask-image: url("~assets/img/svg/home.svg");
+      -webkit-mask-image: url("~assets/img/SVG/home.svg");
       @include support-settings;
       background-color: $color-menu-links;
-      mask-image: url("~assets/img/svg/home.svg"); // after 3 years mask-image, without prefix, still does not work in chrome
+      mask-image: url("~assets/img/SVG/home.svg"); // after 3 years mask-image, without prefix, still does not work in chrome
     }
   }
 
